--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ label {
   margin-bottom: 4px;
   margin-top: 16px;
   display: block;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 /* Button */
