home page and nav bar

--- a/src/components/home.component.css
+++ b/src/components/home.component.css
@@ -1,4 +1,13 @@
 .home-page {
   margin: auto;
   width: 50%;
+
+  position: fixed;
+  top: 25%;
+  left: 25%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
