--- a/src/components/signin.component.css
+++ b/src/components/signin.component.css
@@ -79,8 +79,8 @@ input[type="submit"]:hover {
     font-weight: 700;
     width: 15vh;
     height: 5vh;
-    padding-left: 10px;
-    margin: 10px;
+    padding-left: 2vh;
+    margin: 2vh;
     margin-top: 3vh;
     background-color: #1a312b;
     color: #F5F3F0;
