--- a/src/components/signup.component.css
+++ b/src/components/signup.component.css
@@ -1,6 +1,95 @@
-.sign-up {
-  position: absolute;
+div.slide-up {
+  padding-top: 13vh;
   margin: auto;
   width: 50%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
   left: 25%;
+}
+
+div.slide-up p {
+animation: 1.5s slide-up;
+margin-top: 0%;
+}
+
+@keyframes slide-up {
+from {
+  margin-top: 100%;
+  height: 300%;
+}
+to {
+  margin-top: 0%;
+  height: 100%;
+}
+}
+
+h1 {
+  font-size: 6vh;
+  padding-bottom: 2vh;
+}
+
+.border {
+  border-width: 3px;
+  border-radius: 20px;
+  padding: 10vh;
+  background-color: rgb(212, 221, 206);
+}
+
+.body {
+  padding-top: 1vh;
+  font-size: 2vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input[type=text]{
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #58b285;
+  width: 40vh;
+  height:5vh;
+  font-size: 2vh;
+  margin: 1vh;
+}
+  
+input[type=text]:focus {
+  outline: none;
+}
+
+input[type="submit"]{
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #446555;
+  font-size: 2vh;
+  font-weight: 700;
+  width: 15vh;
+  height: 5vh;
+  padding-left: 2vh;
+  margin: 2vh;
+  margin-top: 3vh;
+  background-color: #A0BF8A;
+  color: #513A28;
+}
+
+input[type="submit"]:hover {
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #446555;
+  font-size: 2vh;
+  font-weight: 700;
+  width: 15vh;
+  height: 5vh;
+  padding-left: 2vh;
+  margin: 2vh;
+  margin-top: 3vh;
+  background-color: #1a312b;
+  color: #F5F3F0;
 }
