--- a/src/components/home.component.css
+++ b/src/components/home.component.css
@@ -3,11 +3,16 @@
   width: 50%;
 
   position: fixed;
-  top: 25%;
+  top: 22%;
   left: 25%;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  border-width: 3px;
+  border-radius: 20px;
+  padding: 10vh;
+  background-color: rgb(212, 221, 206);
 }
