--- a/src/components/resources.component.css
+++ b/src/components/resources.component.css
@@ -1,3 +1,18 @@
-a {
-    font-size: 10px;
+.resource-page {
+    margin: auto;
+    width: 50%;
+  
+    position: fixed;
+    top: 22%;
+    left: 25%;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    border-width: 3px;
+    border-radius: 20px;
+    padding: 10vh;
+    background-color: rgb(212, 221, 206);
 }
