--- a/src/components/resources.component.css
+++ b/src/components/resources.component.css
@@ -1,3 +1,41 @@
+div.slide-up {  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    border-width: 3px;
+    border-radius: 20px;
+    padding: 6vh;
+    padding-top: 0vh;
+    background-color: rgb(212, 221, 206);
+    margin: auto;
+    margin-top: 5vh;
+    width: 50%;
+    height: 60%;
+    left: 25%;
+    top: 10%;
+  }
+  
+div.slide-up p {
+  animation: 1s slide-up;
+  margin-top: 0%;
+}
+  
+@keyframes slide-up {
+  from {
+    margin-top: 100%;
+    height: 300%;
+  }
+  to {
+    margin-top: 0%;
+    height: 100%;
+  }
+}
+
+h1{
+    padding-bottom: 5vh;
+}
+
 .resource-page {
     margin: auto;
     width: 50%;
@@ -13,6 +51,7 @@
   
     border-width: 3px;
     border-radius: 20px;
-    padding: 10vh;
+    padding: 5vh;
+    padding-top: 0vh;
     background-color: rgb(212, 221, 206);
 }
