--- a/src/components/home.component.css
+++ b/src/components/home.component.css
@@ -13,6 +13,6 @@
 
   border-width: 3px;
   border-radius: 20px;
-  padding: 10vh;
+  padding: 0 5vh 10vh 5vh;
   background-color: rgb(212, 221, 206);
 }
