password type to password

--- a/src/components/signup.component.css
+++ b/src/components/signup.component.css
@@ -62,6 +62,21 @@ input[type=text]:focus {
   outline: none;
 }
 
+input[type=password]{
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #58b285;
+  width: 40vh;
+  height:5vh;
+  font-size: 2vh;
+  margin: 1vh;
+}
+  
+input[type=password]:focus {
+  outline: none;
+}
+
 input[type="submit"]{
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
