--- a/src/components/signin.component.css
+++ b/src/components/signin.component.css
@@ -58,8 +58,23 @@ input[type=text]{
     margin: 1vh;
 }
     
-input[type=text]:focus {
+input[type=password]:focus {
     outline: none;
+}
+
+input[type=password]{
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  border: 1px solid #58b285;
+  width: 40vh;
+  height:5vh;
+  font-size: 2vh;
+  margin: 1vh;
+}
+  
+input[type=text]:focus {
+  outline: none;
 }
 
 input[type="submit"]{
