--- a/src/components/dashboard.component.css
+++ b/src/components/dashboard.component.css
@@ -28,8 +28,34 @@ p {
 
 #file-upload-section {
   margin-bottom: 10vh;
+  padding-top: 60px; margin-top: -60px
+}
+
+#expenses-section {
+  padding-top: 60px; margin-top: -60px
 }
 
 #analytics-section {
   margin-top: 10vh;
+  margin-bottom: 40px;
+  padding-top: 60px; margin-top: -60px
+}
+.topSection {
+  display: flex;
+}
+.overview {
+  width: 400px;
+  background-color: rgb(212, 221, 206);
+  padding-top: 30px;
+  display: flex;
+  padding-left: 30px;
+  margin-right: 20px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+}
+.text {
+  padding-top:5px;
+}
+.unbold {
+  font-weight:normal
 }
